--- a/NAMESPACE
+++ b/NAMESPACE
@@ -827,7 +827,11 @@ export(mcc)
 export(mcp)
 export(meancosts)
 export(measureACC)
+export(measureAU1P)
+export(measureAU1U)
 export(measureAUC)
+export(measureAUNP)
+export(measureAUNU)
 export(measureBAC)
 export(measureBrier)
 export(measureEXPVAR)
@@ -845,7 +849,6 @@ export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
 export(measureMSE)
-export(measureMulticlassBrier)
 export(measureNPV)
 export(measurePPV)
 export(measureRMSE)
@@ -863,8 +866,10 @@ export(mergeBenchmarkResultTask)
 export(mergeSmallFactorLevels)
 export(mmce)
 export(mse)
-export(multiclass.auc)
-export(multiclass.brier)
+export(multiclass.au1p)
+export(multiclass.au1u)
+export(multiclass.aunp)
+export(multiclass.aunu)
 export(normalizeFeatures)
 export(npv)
 export(oversample)
