--- a/NAMESPACE
+++ b/NAMESPACE
@@ -887,6 +887,7 @@ export(measureMEDAE)
 export(measureMEDSE)
 export(measureMMCE)
 export(measureMSE)
+export(measureMulticlassBrier)
 export(measureNPV)
 export(measurePPV)
 export(measureRMSE)
@@ -908,6 +909,7 @@ export(multiclass.au1p)
 export(multiclass.au1u)
 export(multiclass.aunp)
 export(multiclass.aunu)
+export(multiclass.brier)
 export(normalizeFeatures)
 export(npv)
 export(oversample)
